<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
	<PreferenceCategory android:title="@string/ime_connection" >
	    <com.cipherlab.cipherconnectpro2.BuildConnMethodPreference
	        android:key="btnBT_buildConn"
	        android:defaultValue="@string/Str_BMPrefFormat"/>
	</PreferenceCategory>
	
    <PreferenceCategory android:title="@string/ime_setting_name" >

    	<CheckBoxPreference
	    	android:key="ckbSuspend_Enable"
	        android:title="@string/Backlight_Suspend_Title" />
    
    	<CheckBoxPreference
            android:defaultValue="false"
            android:key="ckbMinimum"
            android:title="@string/setting_minimum" />
		
		<CheckBoxPreference
	    	android:key="ckbDisconnSwch"
	        android:title="@string/setting_disconnSwch" 
	        android:summary="@string/setting_disconnSwchSum"/>	
        
        <ListPreference
            android:dialogTitle="@string/setting_barcode_input"
            android:key="lstSendBarcodeInterval"
            android:entries="@array/SendBarcodeInterval_entries"
            android:entryValues="@array/SendBarcodeInterval_entries_value"
            android:defaultValue="7"            
            android:title="@string/setting_barcode_input" />
         
        <ListPreference
            android:dialogTitle="@string/setting_language"
            android:key="lstLanguage"
            android:entries="@array/Language_entries"
            android:entryValues="@array/Language_entries_value"
            android:defaultValue="No"            
            android:title="@string/setting_language" />
        <Preference
            android:title="@string/setting_scanner_config" 
            android:summary="@string/setting_scanner_config_sum">
            <intent 
            	android:targetPackage="com.cipherlab.cipherconnectpro2"
            	android:targetClass="com.cipherlab.cipherconnectpro2.ScannerConfigBarcodePage">
        	</intent>
        </Preference>
        <Preference
            android:key="about"
            android:title="@string/setting_about" >
            <intent 
            	android:targetPackage="com.cipherlab.cipherconnectpro2"
            	android:targetClass="com.cipherlab.cipherconnectpro2.CipherConnectAboutActivity"
            	android:action="prefs_display">
        	</intent>
        </Preference>
    </PreferenceCategory>

</PreferenceScreen>