<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imvCompany"
        android:layout_width="300sp"
        android:layout_height="145sp"
        android:layout_gravity="center"
        android:src="@drawable/logo" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#e8e8e8"
        android:text="@string/about_company"
        android:textSize="13sp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_company_value"
        android:textSize="18sp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#e8e8e8"
        android:text="@string/about_url"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/website"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"       
        android:textSize="20sp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#e8e8e8"
        android:text="@string/about_help"
        android:textSize="13sp" />

     <TextView
        android:id="@+id/help"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"       
        android:textSize="20sp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#e8e8e8"
        android:text="@string/about_version"
        android:textSize="13sp" />
    
    <TextView
        android:id="@+id/txtVersion"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_version_value"
        android:textSize="18sp" />

</LinearLayout>