<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
	
	    <Button
	        android:id="@+id/btnBuildConn"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="80"
	        android:gravity="start|center_vertical"
	        android:text="@string/setting_buildconnect" />
	
	    <ImageButton
	        android:id="@+id/btnConnMethod"
	        android:layout_width="70dp"
	        android:layout_height="70dp"
	        android:adjustViewBounds="true"
	        android:paddingBottom="1dp"
	        android:paddingLeft="1dp"
	        android:paddingRight="1dp"
	        android:paddingTop="1dp"
	        android:scaleType="fitCenter"
	        android:src="@drawable/slave_conn" />

	</LinearLayout>

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" >

		<Button
		    android:id="@+id/btnSearchDevice"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/str_chooseScanner" />

		<CheckBox
		    android:id="@+id/ckAutoReConn"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/setting_autoconnect" />

	</LinearLayout>

</LinearLayout>